--- a/.github/workflows/xs.yml
+++ b/.github/workflows/xs.yml
@@ -25,7 +25,7 @@ jobs:
           pip install -r ./requirements.txt
       - name: Run TOTP Script
         env:
-          TG_BOT_TOKEN: ${{ Secret.TG_BOT_TOKEN }}  # 从 Secrets 中读取 TOTP Secret
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}  # 从 Secrets 中读取 TOTP Secret
   
       - name: 运行
         run: |
