--- a/.github/workflows/cloudns.yml
+++ b/.github/workflows/cloudns.yml
@@ -31,4 +31,4 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
         run: |
-          python main.py
+          python cloudns.py
