--- a/.github/workflows/cloudns.yml
+++ b/.github/workflows/cloudns.yml
@@ -30,5 +30,6 @@ jobs:
           CLOUDNS_API_PASSWORD: ${{ secrets.CLOUDNS_API_PASSWORD }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
           python cloudns.py
