--- a/.github/workflows/xs.yml
+++ b/.github/workflows/xs.yml
@@ -31,6 +31,7 @@ jobs:
           pip install -r ./requirements.txt
       - name: Run xs
         env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}  # 从 Secrets 中读取 TOTP Secret
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}# 从 Secrets 中读取 TOTP Secret
         run: |
           python3 xs.py
