--- a/.github/workflows/xs.yml
+++ b/.github/workflows/xs.yml
@@ -12,7 +12,7 @@ on:
       - 'xs.yml'
       - 'xs.py'
   schedule:
-    - cron: '2 10,15,1,22 * * *'
+    - cron: '2 * * * *'
   watch:
     types: started
 
