--- a/.github/workflows/xs.yml
+++ b/.github/workflows/xs.yml
@@ -36,3 +36,12 @@ jobs:
           TG_USER_ID: ${{ secrets.TG_USER_ID }}# 从 Secrets 中读取 TOTP Secret
         run: |
           python3 xs.py
+
+      # 5. 自动提交变更
+      - name: Commit changes
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add novel.txt
+          git commit -m "自动更新小说列表 $(date +'%Y-%m-%d')" || echo "无变更"
+          git push
