--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -17,6 +17,8 @@ jobs:
           python-version: '3.10'
       
       - run: pip install requests -r requirements.txt
+        env:
+          GV_URL: ${{ secrets.GV_URL }}
       
       - run: python gv.py
       
