--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -1,9 +1,9 @@
-name: 
+name: gv
 
 on:
   workflow_dispatch:  # 手动触发
   schedule:
-    - cron: '3 21 * * *'  # 每6小时自动运行
+    - cron: '3 21 * * *'  # 每天UTC时间21:03运行
 
 jobs:
   update:
@@ -16,16 +16,30 @@ jobs:
         with:
           python-version: '3.10'
       
-      - run: pip install requests -r requirements.txt
+      - name: Install dependencies
+        run: |
+          pip install requests
+          pip install -r requirements.txt  # 如果存在requirements.txt
         env:
           GV_URL: ${{ secrets.GV_URL }}
       
-      - run: python gv.py
+      - name: Run script
+        run: |
+          # 创建result目录（如果不存在）
+          mkdir -p result
+          python gv.py  # 确保脚本输出到result目录
       
       - name: Commit changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add gg.txt
-          git commit -m "自动更新加密节点列表 $(date +'%Y-%m-%d %H:%M')" || echo "无变更"
-          git push
+          
+          # 检查文件是否存在再提交
+          if [ -f "result/gg.txt" ]; then
+            git add result/gg.txt
+            git commit -m "自动更新加密节点列表 $(date +'%Y-%m-%d %H:%M')"
+            git push
+          else
+            echo "警告：result/gg.txt 文件未生成"
+            exit 1  # 可选：使步骤失败
+          fi
