--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run script
         run: |
           # 创建result目录（如果不存在）
-          mkdir -p result
+          mkdir -p results
           python gv.py  # 确保脚本输出到result目录
       
       - name: Commit changes
@@ -35,8 +35,8 @@ jobs:
           git config --global user.email "actions@github.com"
           
           # 检查文件是否存在再提交
-          if [ -f "result/gg.txt" ]; then
-            git add result/gg.txt
+          if [ -f "results/gg.txt" ]; then
+            git add results/gg.txt
             git commit -m "自动更新加密节点列表 $(date +'%Y-%m-%d %H:%M')"
             git push
           else
