--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -35,10 +35,6 @@ jobs:
           git config --global user.email "actions@github.com"
           
           # 检查文件是否存在再提交
-            git add results/gg.txt
+            git add results/
             git commit -m "自动更新加密节点列表 $(date +'%Y-%m-%d %H:%M')"
             git push
-          else
-            echo "警告：result/gg.txt 文件未生成"
-            exit 1  # 可选：使步骤失败
-          fi
