--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -18,23 +18,19 @@ jobs:
       
       - name: Install dependencies
         run: |
-          pip install requests
           pip install -r requirements.txt  # 如果存在requirements.txt
         env:
           GV_URL: ${{ secrets.GV_URL }}
       
       - name: Run script
         run: |
-          # 创建result目录（如果不存在）
-          mkdir -p results
+          # 创建result目录（如果不存在)
           python gv.py  # 确保脚本输出到result目录
       
       - name: Commit changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
-          # 检查文件是否存在再提交
           git add results/
           git commit -m "自动更新加密节点列表 $(date +'%Y-%m-%d %H:%M')"
           git push
