--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add results/
+          git add gg.txt
           git commit -m "Auto update speedtest results" || echo "No changes to commit"
           git push
