--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -27,6 +27,10 @@ jobs:
           pip install -r requirements.txt  # 如果存在requirements.txt
         env:
           GV_URL: ${{ secrets.GV_URL }}
+      - name: Create marker file
+        run: |
+          mkdir -p results
+          touch results/gg.txt
       
       - name: Run script
         run: |
@@ -37,6 +41,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add gg.txt
+          git add results/gg.txt
           git commit -m "Auto update speedtest results" || echo "No changes to commit"
           git push
