--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -2,45 +2,50 @@ name: gv
 
 on:
   push:
-    branches:
-      - main  # 触发条件：推送到 main 分支时运行
+    branches: [ main ]
   pull_request:
-    branches:
-      - main  # 触发条件：创建 pull request 到 main 分支时运行
-  workflow_dispatch:  # 手动触发
+    branches: [ main ]
+  workflow_dispatch:
   schedule:
     - cron: '3 21 * * *'  # 每天UTC时间21:03运行
 
 jobs:
   update:
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: write  # 添加推送权限
+
     steps:
       - uses: actions/checkout@v4
-      
+        with:
+          persist-credentials: true  # 保留推送凭证
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      
+
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt  # 如果存在requirements.txt
         env:
-          GVURL: ${{ secrets.GVURL }}
-      - name: Create marker file
+          GVURL: ${{ secrets.GVURL }}  # 修复缺少的闭合括号
         run: |
-          mkdir -p results
-          touch results/gg.txt
-      
+          pip install requests beautifulsoup4
+
+
       - name: Run script
         run: |
-          # 创建result目录（如果不存在)
-          python gv.py  # 确保脚本输出到result目录
-      
-      - name: cs
+          mkdir -p results
+          python gv.py
+
+      - name: Commit and push
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add results/gg.txt
-          git commit -m "Auto update speedtest results" || echo "No changes to commit"
-          git push
+          
+          # 只有当文件有变化时才提交
+          if git diff --quiet --exit-code -- results/; then
+            echo "没有检测到文件变化，跳过提交"
+          else
+            git add results/
+            git commit -m "自动更新 $(date +'%Y-%m-%d %H:%M')"
+            git push
+          fi
