--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -7,7 +7,10 @@ on:
     branches: [ main ]
   workflow_dispatch:
   schedule:
-    - cron: '3 21 * * *'  # 每天UTC时间21:03运行jobs:
+    - cron: '3 21 * * *'  # 每天UTC时间21:03运
+
+
+jobs:
   update:
     runs-on: ubuntu-latest
     env:
