--- a/.github/workflows/gv.yml
+++ b/.github/workflows/gv.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Commit changes
         if: success()
         run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git add results/gg.txt
           git commit -m "Auto update $(date +'%Y-%m-%d')" || echo "No changes"
           git push
