--- a/.github/workflows/xs.yml
+++ b/.github/workflows/xs.yml
@@ -35,6 +35,7 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}# 从 Secrets 中读取 TOTP Secret
         run: |
+          mkdir -p daili
           python3 xs.py
 
       # 5. 自动提交变更
