--- a/.github/workflows/daili.yml
+++ b/.github/workflows/daili.yml
@@ -2,8 +2,8 @@ name: daili
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # 每天UTC时间0点运行
-  workflow_dispatch:     # 手动触发
+    - cron: '0 */4 * * *'
+  workflow_dispatch:
   push:
     branches: [main]
 
@@ -14,6 +14,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -35,14 +38,38 @@ jobs:
       run: |
         python daili.py
         
-    - name: Commit results
+    - name: Commit and push results
       run: |
+        echo "💾 开始提交更改..."
+        
+        # 配置Git
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
+        git config --global pull.rebase true
+        
+        # 先拉取最新更改
+        echo "📥 拉取远程最新更改..."
+        git pull origin main
+        
+        # 检查是否有更改
+        echo "🔍 检查更改..."
+        git status
+        
+        # 添加所有更改
         git add -A
-        if ! git diff-index --quiet HEAD --; then
-          git commit -m "🤖 Auto update proxy results"
-          git push
+        
+        # 检查是否有需要提交的更改
+        if git diff-index --quiet HEAD --; then
+          echo "ℹ️ 没有检测到更改，跳过提交"
+        else
+          # 提交更改
+          echo "📝 提交更改..."
+          git commit -m "🤖 Auto update proxy results - $(date +'%Y-%m-%d %H:%M:%S')"
+          
+          # 推送更改
+          echo "📤 推送更改..."
+          git push origin main
+          echo "✅ 更改已成功推送"
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
